# notes

./: .env  README.md  docker-compose.yml  nginx.conf  prometheus.yml
kubernetes/: notes_backend.yml  postgres.yml
notes/: .env  Dockerfile  README.md  package-lock.json
notes/src/: App.css  App.js
notes_backend/: Dockerfile  pyproject.toml
notes_backend/misc/: benchmark.py  provision.py
notes_backend/notes_backend/: main.py  routes.py  setup_app.py
notes_backend/notes_backend/core/: config.py  logger.py  schema.py
notes_backend/notes_backend/db/: session.py
notes_backend/notes_backend/modules/note/: api_schema.py  models.py  routes.py
notes_backend/notes_backend/modules/note/db/: tables.sql
