[tool.poetry]
name = "notes-backend"
version = "0.1.0"
description = ""
authors = ["Grzegorz Szpura <g.szpura@gmail.com>"]
readme = "README.md"
packages = [{include = "notes_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
sqlalchemy = "1.4.46"
asyncpg = "0.27.0"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
